# autoclaude

./: .beans.yml  .gitignore  README.md  WHITEBOARD.md  autoclaude.py  pyproject.toml
.beans/: autoclaude-22wc--ui-agregar-tests-para-backend-y-frontend.md  autoclaude-3ojm--ui-live-output-streaming.md  autoclaude-7cbm--ui-tasks-view-lista-de-beans.md  autoclaude-9jfm--ui-polish-dark-mode-mobile-pwa.md  autoclaude-9q87--autoclaude-web-ui.md  autoclaude-dn2m--ui-controls-startpausestop.md  autoclaude-iomp--ui-implementar-pauseresume-con-señales.md  autoclaude-iwqr--ui-backend-base-fastapi-websocket.md  autoclaude-m9j9--ui-whiteboard-view.md  autoclaude-nz6v--ui-agregar-comando-autoclaude-ui-al-cli.md  autoclaude-ugyy--ui-history-view-historial-de-iteraciones.md  autoclaude-vyu3--ui-frontend-base-dashboard.md  autoclaude-ydlv--ui-output-estructurado-para-comunicación-con-ui.md
.github/workflows/: test.yml
autoclaude/: __main__.py  beans.py  claude.py  cli.py  json_events.py  paths.py  rate_limit.py  time_band.py
autoclaude/performers/: base.py  cleanup.py  deploy.py  registry.py  task.py  ui.md  ui.py
lab/: .beans.yml  run.py  scoring.py
lab/prompts/: ui_review_heuristics.md  ui_review_structured.md
prompts/: base.py  cleanup.md  cleanup.py  deploy.md  deploy.py  registry.py  task.md  task.py  ui.md  ui.py
ui/: __main__.py
ui/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
ui/frontend/public/: manifest.json  sw.js
ui/frontend/src/: App.tsx  index.css  main.tsx
ui/frontend/src/__tests__/: setup.ts  types.test.ts
ui/server/: api.py  app.py  history.py  models.py  process_manager.py  websocket.py
ui/server/tests/: conftest.py  test_api.py  test_history.py  test_process_manager.py  test_websocket.py
(+18 files in other folders)
