[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoclaude"
version = "0.1.0"
description = "Automatically implement user stories with Claude"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
autoclaude = "autoclaude.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["autoclaude"]

[tool.uv]
package = true
