[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoclaude"
version = "0.1.0"
description = "Automatically implement user stories with Claude"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
ui = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
autoclaude = "autoclaude.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["autoclaude"]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["ui/server/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_default_fixture_loop_scope = "function"
